--- a/index.html
+++ b/index.html
@@ -291,7 +291,11 @@
                 font-size: 2rem;
             }
         }
-
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
         /* Кнопки */
         .btn {
             display: inline-block;
@@ -445,6 +449,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="container">
+        <a href="sermons.html" class="btn">Смотреть все</a>
     </div>
 </section>
     <!-- Служения -->
